[package]
name = "aromatic"
version = "0.1.1"
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/lucas-montes/aromatic"
authors = ["Lucas Montes <lluc23@hotmail.com>"]
description = "Automatic ORM"
default-run = "aromacli"

[[bin]]
name = "aromacli"
path = "src/bin/aromacli.rs"

# enables invocation as `cargo aromacli`; required for `prepare` subcommand
[[bin]]
name = "cargo-aromacli"
path = "src/bin/cargo-aromacli.rs"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
menva = "0.1.1"
tracing = "0.1"
serde = { version = "1.0.163", features = ["derive", "rc"] }
clap = "4.3.19"
console = "0.15.0"
syn = { version = "2.0.64", features = ["full", "extra-traits"] }
